force-app/main/default/objects/Country__c/fields/Currency_Code_PI__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code_PI__c</fullName>
    <description>Global picklist in replace of Country Code(text)</description>
    <label>Currency Code PI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>