force-app/main/default/objects/Country__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <label>Ref No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>