force-app/main/default/objects/Country__c/fields/Stripe_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Base_Url__c</fullName>
    <label>Stripe Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>