force-app/main/default/objects/Country__c/fields/Stripe_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Secret_Key__c</fullName>
    <label>Stripe Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>