force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Code__c</columns>
    <columns>Tax_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>